test/invalid/attr_on_primitive.py
# Attribute access on primitive type
def main() -> None:
    x: int = 5
    y: int = x.value
    print(y)
